--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     --color-lightdark: #313848;
     --color-h3footer:#7289da;
     --color-buttonfooter:#8ea1e1;
-    --colore-separator:#a54848;
+    --color-separator:#313848;
 }
 
 /* DEBUG */
@@ -63,7 +63,7 @@ body {
 }
 
 .bg-white {
-    background-color: #fff;
+    background-color: var(--color-light);
 }
 
 .bg-lightblue {
@@ -72,7 +72,7 @@ body {
 
 a{
     text-decoration: none;
-    color: white;
+    color: var(--color-light);
     font-size: 1.1rem;
 }
 
@@ -94,6 +94,12 @@ h2 {
     padding-bottom: 3rem;
 }
 
+.container.navbar {
+    justify-content: space-between;
+    padding:1.1rem 0;
+    align-items:center;
+}
+
 .container-sm {
     width: 50%;
     min-height: 400px;
@@ -103,15 +109,26 @@ h2 {
     align-items: center;
     justify-content: space-between;
     padding: 4rem;
-    color: #fff;
+    color: var(--color-light);
     text-align: center;
 }
 
-
-.container.navbar {
+.main-section {
     justify-content: space-between;
-    padding:1.1rem 0;
-    align-items:center;
+    padding: 4rem 0;
+}
+
+.last-section {
+    margin-top: 3rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
+
+#footer {
+    background-color: var(--color-dark);
+    color: var(--color-light);
 }
 
 .footer-container {
@@ -121,9 +138,6 @@ h2 {
     align-items:baseline;
 }
 
-.reverse {
-    flex-direction: row-reverse;
-}
 
 /* UTILS */
 
@@ -139,7 +153,7 @@ h2 {
 
 .btn-black {
     background-color: var(--color-dark);
-    color: white;
+    color: var(--color-light);
 }
 
 .sp-btw{
@@ -158,10 +172,25 @@ h2 {
     padding-top: 30px;
 }
 
+.reverse {
+    flex-direction: row-reverse;
+}
+
+.separator {
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 2rem;
+    border: 3px solid var(--color-separator);
+}
+
 /* NAVBAR */
 
 .header-bg {
-    background-color: #255EE9;
+    background-color: var(--color-bgheader);
+}
+
+.logo>img{
+    width: 7rem;
 }
 
 .menu-header a {
@@ -188,29 +217,14 @@ h2~p {
     font-size: 1.5rem;
 }
 
-.main-section {
-    justify-content: space-between;
-    padding: 4rem 0;
 
-}
-
-.last-section {
-    margin-top: 3rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 2rem;
-}
 
 /* FOOTER */
 
-#menu-footer {
-    background-color: #23272a;
-    color: #fff;
-} 
+
 
 .footer-container a {
-    color: white;
+    color: var(--color-light);
     text-decoration: none;
  font-size: 0.7rem;
 }
@@ -220,7 +234,7 @@ h2~p {
     list-style-type: none;
 }
 
-.social {
+.social-menu {
     line-height: 2rem;
     font-size: 1.3rem;
 }
@@ -229,9 +243,3 @@ h2~p {
     line-height: 0.9rem;
 }
 
-.separator {
-    width: 70%;
-    margin-left: 15%;
-    margin-bottom: 2rem;
-    border: 3px solid #313848;
-}
