--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,11 +121,10 @@ h3 {
 
 .main-section {
     justify-content: space-between;
-    padding: 4rem 0;
+    padding: 2rem 0;
 }
 
 .last-section {
-    margin-top: 3rem;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
@@ -198,6 +197,23 @@ h3 {
     margin-left: 15%;
     margin-bottom: 2rem;
     border: 3px solid var(--color-separator);
+}
+
+/* wave effect */
+
+.wave {
+    width: 100%;
+    height: 100px;
+    opacity: 17%;
+}
+
+.wave>img {
+    width: 100%;
+    height: 100px;
+}
+
+.reverse-wave>img {
+    transform: rotate(180deg);
 }
 
 /* NAVBAR */
