--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,42 +8,35 @@
     --color-h3footer: #7289da;
     --color-buttonfooter: #8ea1e1;
     --color-separator: #313848;
+    --color-even-section: #f6f6f6;
 }
 
 /* DEBUG */
 
-.debug * {
+#debug * {
     border: 1px dotted;
-}
 
-.debug .header-bg {
-    background-color: #3161e0;
-}
 
-.debug .title {
-    background-color: rgba(48, 18, 201, 0.719);
-}
+    .header-bg {
+        background-color: #566794;
+    }
 
-.debug .jumbotron {
-    background-color: #3161e0;
-}
+    .title {
+        background-color: rgba(48, 18, 201, 0.719);
+    }
 
-.debug .left,
-.debug .right {
-    background-color: blueviolet;
-}
+    .jumbotron {
+        background-color: #3161e0;
+    }
 
-.debug footer {
-    background-color: rgb(0, 0, 0);
-    color: #fff;
-}
+    .w-40,
+    .w-60 {
+        background-color: blueviolet;
+    }
 
-.debug .separator {
-    border: 2px solid purple;
-}
-
-.debug #menu-footer {
-    background-color: rgb(109, 44, 44);
+    .separator {
+        border: 3px solid purple;
+    }
 }
 
 /* RESET */
@@ -55,20 +48,22 @@
 }
 
 /* GENERICS */
+
 body {
     font-family: "Roboto", sans-serif;
 }
 
+main>*:not(.wave),
+footer {
+    padding: 2rem;
+}
+
 .bg-lightgray {
-    background-color: lightgrey;
+    background-color: var(--color-even-section);
 }
 
 .bg-white {
     background-color: var(--color-light);
-}
-
-.bg-lightblue {
-    background-color: lightblue;
 }
 
 a {
@@ -91,17 +86,19 @@ h3 {
 
 }
 
+li>h3 {
+    color: var(--color-h3footer);
+    padding-bottom: 1rem;
+}
+
 /* LAYOUT */
 
 .container {
     max-width: 70%;
     margin: 0 auto;
-    display: flex;
-    padding-bottom: 3rem;
 }
 
 .container.navbar {
-    justify-content: space-between;
     padding: 1.1rem 0;
     align-items: center;
 }
@@ -110,10 +107,8 @@ h3 {
     width: 50%;
     min-height: 400px;
     margin: 0 auto;
-    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     padding: 4rem;
     color: var(--color-light);
     text-align: center;
@@ -127,25 +122,16 @@ h3 {
 .last-section {
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     gap: 2rem;
-    padding: 50px 0;
+    padding: 20px 0;
 }
-
-#footer {
-    background-color: var(--color-dark);
-    color: var(--color-light);
-}
-
-.footer-container {
-    padding: 2rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-}
-
 
 /* UTILS */
+
+.d-flex {
+    display: flex;
+}
 
 .btn {
     border-radius: 30px;
@@ -163,9 +149,9 @@ h3 {
 }
 
 .btn-lightblue {
-    background-color: #8ea1e1;
-    color: white;
-    border: 1px solid #b9c5e5;
+    background-color: var(--color-buttonfooter);
+    color: var(--color-light);
+    border: 1px solid var(--color-h3footer);
 }
 
 .sp-btw {
@@ -199,12 +185,22 @@ h3 {
     border: 3px solid var(--color-separator);
 }
 
+span>img {
+    height: 1rem;
+    vertical-align: baseline;
+}
+
+a>img {
+    padding-right: 1rem;
+    height: 1.2rem;
+}
+
 /* wave effect */
 
 .wave {
     width: 100%;
     height: 100px;
-    opacity: 17%;
+    opacity: 4%;
 }
 
 .wave>img {
@@ -223,7 +219,7 @@ h3 {
 }
 
 .menu-header a {
-    padding-right: 2rem;
+    padding-right: 1rem;
 }
 
 /* JUMBOTRON */
@@ -238,7 +234,6 @@ h3 {
 h1~p {
     font-size: 1.3rem
 }
-
 
 /* SECTIONS */
 
@@ -259,8 +254,9 @@ h2~p {
 
 /* FOOTER */
 
-li>h3 {
-    color: var(--color-h3footer);
+#footer {
+    background-color: var(--color-dark);
+    color: var(--color-light);
 }
 
 .footer-container a {
@@ -282,7 +278,10 @@ li>h3 {
     line-height: 0.9rem;
 }
 
-span>img {
-    height: 1rem;
-    vertical-align: baseline;
+/* correzione causata da problemi img-social */
+
+.logo-facebook,
+.logo-youtube {
+    height: 1.7rem;
+    vertical-align: text-bottom;
 }
